--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <script src='/javascripts/helper.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/lightgallery/1.3.7/js/lightgallery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/g/lg-thumbnail@1.0.1,lg-fullscreen@1.0.1"></script>
   </head>
   <body>
     <h1><%= title %></h1>
